完善设计文档 v2

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -12,6 +12,9 @@ credit|int|用户的消费积分
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
+========================================  
+<br/>
+
 ## 服务员(waiter)：
 数据名|数据类型|说明
 --|:--|:--
@@ -19,9 +22,12 @@ id|longint|数据库中的id
 userid|varchar|微信id
 name|varchar|微信名字
 logintimes|int|登录次数
+enable|tinyint|是否有效
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
+========================================  
+<br/>
 ## 厨师（cooker）：
 数据名|数据类型|说明
 --|:--|:--
@@ -29,9 +35,13 @@ id|longint|数据库中的id
 userid|varchar|微信id
 name|varchar|微信名字
 logintimes|int|登录次数
+enable|tinyint|是否有效
+role|int|厨师属于哪一种（凉品，熟食）
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
+========================================  
+<br/>
 ## 管理员（admin）:
 数据名|数据类型|说明
 --|:--|:--
@@ -41,28 +51,95 @@ logintimes|int|登录次数
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
+========================================  
+<br/>
+
 ## 菜单（menu）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
 name|varchar|菜品名字
-menulevel|int|菜单等级，第几级菜单
-menunumber|int|菜单编号，属于哪个类
-type|int|菜品类型
-tasteid|int|口味信息id
+menulevel|int|菜单等级，第几级菜单（数字越小，代表标题越大）
+menunumber|int|菜单编号，属于哪个类（0：标题，1：内容）
+type|int|菜品类型（凉品，熟食）
+stylesid|varchar(255)|口味信息集合
 
 
 
  + 范例 
 
-    id|name|menulevel|menunumber|type
-    --|:--|:--|:--|:--|
-    0|川菜|1|0|0
+    id|name|menulevel|menunumber|type|stylesid
+    --|:--|:--|:--|:--|:--|
+    0|川菜|1|0|0|
     1|麻辣|2|0|0
     2|麻辣兔头|0|1|1
     ## 川菜(一级菜单)
     ### 麻辣(二级菜单)
-    #### 麻辣兔头(菜品)
+    #### 麻辣兔头{麻辣，酸辣}(菜品)
+
+========================================  
+<br/>
+## 口味（style）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+name|varchar(255)|口味名称
+
+
+========================================  
+<br/>
+
+## 点餐记录（orderRecord）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+userid|longint|微信id
+dishsid|varchar(255)|点的菜的id集合
+settlementAmount|double|折扣后的结算价格
+originalAmount|double|结算前的价格
+createtime|timestamp|创建的时间
+
+========================================  
+<br/>
+
+## 代付款记录（non-payment Record）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+userid|longint|微信id
+dishsid|varchar(255)|点的菜的id集合
+settlementAmount|double|折扣后的结算价格
+originalAmount|double|结算前的价格
+createtime|timestamp|创建的时间
+expirationtime|timestamp|订单到期时间
+
+
+========================================  
+<br/>
+
+## 常用菜单（frequentlyUsedMenu）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+userid|longint|微信id
+dishsid|varchar(255)|常用菜品的id集合
+stylesid|varchar(255)|常用菜品的口味的id集合
+
+========================================  
+<br/>
+
+## 厨师分配记录（cookerDeliveryRecord）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+orderrecordid|longint|点餐记录
+
+
+
+
+
+
+
 
 
 
