设计文档-数据库设计 v2.1

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -56,34 +56,36 @@ updatetime|timestamp|修改时间
 
 ## 菜单（menu）
 数据名|数据类型|说明
---|:--|:--
+--|:--|:--代
 id|longint|数据库中的id
-name|varchar|菜品名字
-menulevel|int|菜单等级，第几级菜单（数字越小，代表标题越大）
-menunumber|int|菜单编号，属于哪个类（0：标题，1：内容）
-type|int|菜品类型（凉品，熟食）
-stylesid|varchar(255)|口味信息集合
-
-
-
- + 范例 
-
-    id|name|menulevel|menunumber|type|stylesid
-    --|:--|:--|:--|:--|:--|
-    0|川菜|1|0|0|
-    1|麻辣|2|0|0
-    2|麻辣兔头|0|1|1
-    ## 川菜(一级菜单)
-    ### 麻辣(二级菜单)
-    #### 麻辣兔头{麻辣，酸辣}(菜品)
+name|varchar|菜单名字
+createtime|int|创建时间
+updatetime|int|修改时间
 
 ========================================  
 <br/>
+
+## 菜品（food）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+name|varchar|菜品名字
+menuid|longint|所属菜单的名字
+stylesid|varchar(255)|口味id集合
+role|int|类型（凉品，熟食）
+createtime|int|创建时间
+updatetime|int|修改时间
+
+========================================  
+<br/>
+
 ## 口味（style）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
 name|varchar(255)|口味名称
+createtime|int|创建时间
+updatetime|int|修改时间
 
 
 ========================================  
@@ -94,7 +96,7 @@ name|varchar(255)|口味名称
 --|:--|:--
 id|longint|数据库中的id
 userid|longint|微信id
-dishsid|varchar(255)|点的菜的id集合
+foodsid|varchar(255)|点的菜的id集合
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
 createtime|timestamp|创建的时间
@@ -102,16 +104,17 @@ createtime|timestamp|创建的时间
 ========================================  
 <br/>
 
-## 代付款记录（non-payment Record）
+## 待付款记录（non-payment Record）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
 userid|longint|微信id
-dishsid|varchar(255)|点的菜的id集合
+foodsid|varchar(255)|点的菜的id集合
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
-createtime|timestamp|创建的时间
 expirationtime|timestamp|订单到期时间
+createtime|int|创建时间
+updatetime|int|修改时间
 
 
 ========================================  
@@ -122,8 +125,10 @@ expirationtime|timestamp|订单到期时间
 --|:--|:--
 id|longint|数据库中的id
 userid|longint|微信id
-dishsid|varchar(255)|常用菜品的id集合
+foodsid|varchar(255)|常用菜品的id集合
 stylesid|varchar(255)|常用菜品的口味的id集合
+createtime|int|创建时间
+updatetime|int|修改时间
 
 ========================================  
 <br/>
@@ -133,6 +138,10 @@ stylesid|varchar(255)|常用菜品的口味的id集合
 --|:--|:--
 id|longint|数据库中的id
 orderrecordid|longint|点餐记录
+foodid|longid|制作菜品的id
+createtime|int|创建时间
+updatetime|int|修改时间
+
 
 
 
