设计文档-数据库设计 v2.2

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -99,6 +99,8 @@ userid|longint|微信id
 foodsid|varchar(255)|点的菜的id集合
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
+preferenceid|longid|折扣id
+discountid|longid|优惠id 
 createtime|timestamp|创建的时间
 
 ========================================  
@@ -112,6 +114,8 @@ userid|longint|微信id
 foodsid|varchar(255)|点的菜的id集合
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
+preferenceid|longid|折扣id
+discountid|longid|优惠id 
 expirationtime|timestamp|订单到期时间
 createtime|int|创建时间
 updatetime|int|修改时间
@@ -139,6 +143,46 @@ updatetime|int|修改时间
 id|longint|数据库中的id
 orderrecordid|longint|点餐记录
 foodid|longid|制作菜品的id
+createtime|int|创建时间
+updatetime|int|修改时间
+
+========================================  
+<br/>
+
+## 服务员分配记录（waiterDeliveryRecord）
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+orderrecordid|longint|点餐记录
+foodid|longid|分配菜品的id
+createtime|int|创建时间
+updatetime|int|修改时间
+
+========================================  
+<br/>
+
+## 折扣信息记录（preferenceRecord）
+保存折扣信息（积分满多少，可以获得多少的折扣）  
+<br/>
+
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+preference|double|折扣（<1,>0）
+createtime|int|创建时间
+updatetime|int|修改时间
+
+========================================  
+<br/>
+
+## 优惠信息记录（discountRecord）
+保存优惠信息（直接在原价上折扣）  
+<br/>
+
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+discount|double|优惠（<1,>0）
 createtime|int|创建时间
 updatetime|int|修改时间
 
