完成domain模块的建立

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -1,6 +1,6 @@
 # 数据库设计
 
-## 用户(customer)：
+## 1.用户(customer)：
 数据名|数据类型|说明
 --|:--|:--
 id |longint|用户的数据库中的id
@@ -15,7 +15,7 @@ updatetime|timestamp|修改时间
 ========================================  
 <br/>
 
-## 服务员(waiter)：
+## 2.服务员(waiter)：
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -28,7 +28,7 @@ updatetime|timestamp|修改时间
 
 ========================================  
 <br/>
-## 厨师（cooker）：
+## 3.厨师（cooker）：
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -42,7 +42,7 @@ updatetime|timestamp|修改时间
 
 ========================================  
 <br/>
-## 管理员（admin）:
+## 4.管理员（admin）:
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -54,7 +54,7 @@ updatetime|timestamp|修改时间
 ========================================  
 <br/>
 
-## 菜单（menu）
+## 5.菜单（menu）
 数据名|数据类型|说明
 --|:--|:--代
 id|longint|数据库中的id
@@ -65,7 +65,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 菜品（food）
+## 6.菜品（food）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -79,7 +79,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 口味（style）
+## 7.口味（style）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -91,7 +91,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 点餐记录（orderRecord）
+## 8.点餐记录（orderRecord）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -106,7 +106,7 @@ createtime|timestamp|创建的时间
 ========================================  
 <br/>
 
-## 待付款记录（non-payment Record）
+## 9.待付款记录（non-payment Record）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -124,7 +124,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 常用菜单（frequentlyUsedMenu）
+## 10.常用菜单（frequentlyUsedMenu）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -137,7 +137,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 厨师分配记录（cookerDeliveryRecord）
+## 11.厨师分配记录（cookerDeliveryRecord）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -149,7 +149,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 服务员分配记录（waiterDeliveryRecord）
+## 12.服务员分配记录（waiterDeliveryRecord）
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -161,7 +161,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 折扣信息记录（preferenceRecord）
+## 13.折扣信息记录（preferenceRecord）
 保存折扣信息（积分满多少，可以获得多少的折扣）  
 <br/>
 
@@ -175,7 +175,7 @@ updatetime|int|修改时间
 ========================================  
 <br/>
 
-## 优惠信息记录（discountRecord）
+## 14.优惠信息记录（discountRecord）
 保存优惠信息（直接在原价上折扣）  
 <br/>
 
@@ -186,6 +186,7 @@ discount|double|优惠（<1,>0）
 createtime|int|创建时间
 updatetime|int|修改时间
 
+root_RSS
 
 
 
