增加了推荐菜品表

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -187,6 +187,23 @@ discount|double|优惠（<1,>0）
 createtime|int|创建时间
 updatetime|int|修改时间
 
+========================================  
+<br/>
+
+
+## 15.推荐菜品 2019/3/23
+在首页中推荐的菜品列表，当标记（flag）为0时为轮播推荐，当标记为1时为网格推荐
+
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+foodid|longint|food的id
+flag|int|展示时的方式
+createtime|int|创建时间
+updatetime|int|修改时间
+
+
+
 root_RSS
 
 
