增加了推荐菜品表

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -191,7 +191,7 @@ updatetime|int|修改时间
 <br/>
 
 
-## 15.推荐菜品 2019/3/23
+## 15.推荐菜品（recommendedFood） 2019/3/23
 在首页中推荐的菜品列表，当标记（flag）为0时为轮播推荐，当标记为1时为网格推荐
 
 数据名|数据类型|说明
