在点餐记录表中添加了口味集合

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -66,7 +66,6 @@ updatetime|int|修改时间
 <br/>
 
 ## 6.菜品（food）
-
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
@@ -98,6 +97,7 @@ updatetime|int|修改时间
 id|longint|数据库中的id
 userid|longint|微信id
 foodsid|varchar(255)|点的菜的id集合
+stylesid|varchar(255)|点的菜的口味id集合(与foodsid列表一一对应)
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
 preferenceid|longid|折扣id
@@ -131,7 +131,7 @@ updatetime|int|修改时间
 id|longint|数据库中的id
 userid|longint|微信id
 foodsid|varchar(255)|常用菜品的id集合
-stylesid|varchar(255)|常用菜品的口味的id集合
+stylesid|varchar(255)|常用菜品的口味的id集合(与foodsid列表一一对应)
 createtime|int|创建时间
 updatetime|int|修改时间
 
