将分割线添加颜色，方便区分

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -12,7 +12,7 @@ credit|int|用户的消费积分
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 2.服务员(waiter)：
@@ -26,7 +26,7 @@ enable|tinyint|是否有效
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 ## 3.厨师（cooker）：
 数据名|数据类型|说明
@@ -40,7 +40,7 @@ role|int|厨师属于哪一种（凉品，熟食）
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 ## 4.管理员（admin）:
 数据名|数据类型|说明
@@ -51,7 +51,7 @@ logintimes|int|登录次数
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 5.菜单（menu）
@@ -62,7 +62,7 @@ name|varchar|菜单名字
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 6.菜品（food）
@@ -76,7 +76,7 @@ role|int|类型（凉品，熟食）
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 7.口味（style）
@@ -88,7 +88,7 @@ createtime|int|创建时间
 updatetime|int|修改时间
 
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 8.点餐记录（orderRecord）
@@ -104,7 +104,7 @@ preferenceid|longid|折扣id
 discountid|longid|优惠id 
 createtime|timestamp|创建的时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 9.待付款记录（non-payment Record）
@@ -122,7 +122,7 @@ createtime|int|创建时间
 updatetime|int|修改时间
 
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 10.常用菜单（frequentlyUsedMenu）
@@ -135,7 +135,7 @@ stylesid|varchar(255)|常用菜品的口味的id集合(与foodsid列表一一对
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 11.厨师分配记录（cookerDeliveryRecord）
@@ -147,7 +147,7 @@ foodid|longid|制作菜品的id
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 12.服务员分配记录（waiterDeliveryRecord）
@@ -159,7 +159,7 @@ foodid|longid|分配菜品的id
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 13.折扣信息记录（preferenceRecord）
@@ -173,7 +173,7 @@ preference|double|折扣（<1,>0）
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 ## 14.优惠信息记录（discountRecord）
@@ -187,7 +187,7 @@ discount|double|优惠（<1,>0）
 createtime|int|创建时间
 updatetime|int|修改时间
 
-========================================  
+<font color=#00ffff>============================================================================</font>  
 <br/>
 
 
