在待付款记录中添加是否付款字段

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -118,6 +118,7 @@ originalAmount|double|结算前的价格
 preferenceid|longid|折扣id
 discountid|longid|优惠id 
 expirationtime|timestamp|订单到期时间
+IsPaid|tinyint|是否付款
 createtime|int|创建时间
 updatetime|int|修改时间
 
