为每个服务接口添加了所在页面说明

--- a/设计文档/服务接口设计.md
+++ b/设计文档/服务接口设计.md
@@ -2,7 +2,7 @@
 
 ## 一.信息获取
 
-### 1.菜单(Menu)
+### 1.菜单(Menu) (客户主界面1.1)
 服务名|描述|定义
 --|:--|:--
 getMenuList | 获取所有一级菜单 | getMenuList() : return List<Menu>
@@ -11,7 +11,7 @@ getMenuList | 获取所有一级菜单 | getMenuList() : return List<Menu>
 
 <br>
 
-### 2.菜品(Food)
+### 2.菜品(Food) (客户主界面 1.1)
 服务名|描述|定义
 --|:--|:--
 getFoodByMenuId | 根据menuId,获取该一级菜单下所有的菜品 | getFoodByMenuId(long menuId) : return List<Food>
@@ -20,7 +20,7 @@ getFoodByMenuId | 根据menuId,获取该一级菜单下所有的菜品 | getFood
 
 <br>
 
-### 3.口味(Style)
+### 3.口味(Style) (选择口味Toast 1.1.1)
 服务名|描述|定义
 --|:--|:--
 getStylesByFoodId | 根据FoodId,获取该一级菜单下所有的菜品 | getStylesByFoodId(long foodId) : return List<Style>
@@ -29,7 +29,7 @@ getStylesByFoodId | 根据FoodId,获取该一级菜单下所有的菜品 | getSt
 
 <br>
 
-### 4.常用菜单(FrequentlyUsedMenu)
+### 4.常用菜单(FrequentlyUsedMenu) (常用菜单 1.1.2.1)
 服务名|描述|定义
 --|:--|:--
 getfrequentlyUsedMenuListByUserId | 根据UserId,获取所有常用的菜品的 | getfrequentlyUsedMenuList(long userId) : return List<Food>
@@ -38,7 +38,7 @@ getfrequentlyUsedMenuListByUserId | 根据UserId,获取所有常用的菜品的 
 
 <br>
 
-### 5.常用菜单(FrequentlyUsedMenu)
+### 5.获取积分(FrequentlyUsedMenu) (产看积分 1.1.4.1)
 服务名|描述|定义
 --|:--|:--
 getCreditByUserId | 根据UserId,获取用户的积分 | getCreditByUserId(long userId) : return int
@@ -47,7 +47,7 @@ getCreditByUserId | 根据UserId,获取用户的积分 | getCreditByUserId(long 
 
 <br>
 
-### 5.点餐记录(orderRecord)
+### 5.点餐记录(orderRecord) (查看订单记录页面 1.1.4.3)
 服务名|描述|定义
 --|:--|:--
 getorderRecordByUserId | 根据UserId,获取用户的点餐记录 | getCreditByUserId(long userId, int index, int limit) : return int
