将点餐记录获取接口返回值由int修改为List<OrderRecord>

--- a/设计文档/服务接口设计.md
+++ b/设计文档/服务接口设计.md
@@ -50,4 +50,4 @@ getCreditByUserId | 根据UserId,获取用户的积分 | getCreditByUserId(long 
 ### 5.点餐记录(orderRecord) (查看订单记录页面 1.1.4.3)
 服务名|描述|定义
 --|:--|:--
-getorderRecordByUserId | 根据UserId,获取用户的点餐记录 | getCreditByUserId(long userId, int index, int limit) : return int
+getorderRecordByUserId | 根据UserId,获取用户的点餐记录 | getCreditByUserId(long userId, int index, int limit) : return List<OrderRecord>
