在常用菜单信息获取中添加了界面调用说明->管理常用菜单

--- a/设计文档/服务接口设计.md
+++ b/设计文档/服务接口设计.md
@@ -29,7 +29,7 @@ getStylesByFoodId | 根据FoodId,获取该一级菜单下所有的菜品 | getSt
 
 <br>
 
-### 4.常用菜单(FrequentlyUsedMenu) (常用菜单 1.1.2.1)
+### 4.常用菜单(FrequentlyUsedMenu) (常用菜单 1.1.2.1, 管理常用菜单1.1.4.2)
 服务名|描述|定义
 --|:--|:--
 getfrequentlyUsedMenuListByUserId | 根据UserId,获取所有常用的菜品的 | getfrequentlyUsedMenuList(long userId) : return List<Food>
