--- a/设计文档/服务接口设计.md
+++ b/设计文档/服务接口设计.md
@@ -3,51 +3,52 @@
 ## 一.信息获取
 
 ### 1.菜单(Menu) (客户主界面1.1)
-服务名|描述|定义
---|:--|:--
-getMenuList | 获取所有一级菜单 | getMenuList() : return List<Menu>
+服务名|描述|定义|应用角色
+--|:--|:--|:--
+getMenuList | 获取所有一级菜单 | getMenuList() : return List<Menu> | customer/admin
 
-<font color=#00ffff>============================================================================</font>
+<font color=#00ffff>============================================================================================================</font>
 
 <br>
 
 ### 2.菜品(Food) (客户主界面 1.1)
-服务名|描述|定义
---|:--|:--
-getFoodByMenuId | 根据menuId,获取该一级菜单下所有的菜品 | getFoodByMenuId(long menuId) : return List<Food>
+服务名|描述|定义|应用角色
+--|:--|:--|:--
+getFoodByMenuId | 根据menuId,获取该一级菜单下所有的菜品 | getFoodByMenuId(long menuId) : return List<Food> | customer/admin
 
-<font color=#00ffff>============================================================================</font>
+<font color=#00ffff>============================================================================================================</font>
 
 <br>
 
 ### 3.口味(Style) (选择口味Toast 1.1.1)
-服务名|描述|定义
---|:--|:--
-getStylesByFoodId | 根据FoodId,获取该一级菜单下所有的菜品 | getStylesByFoodId(long foodId) : return List<Style>
+服务名|描述|定义|应用角色
+--|:--|:--|:--
+getStylesByFoodId | 根据FoodId,获取该菜品的所有口味 | getStylesByFoodId(long foodId) : return List<Style> | customer
+getAllstyles | 获取所有的口味 | getAllstyles() : return List<Style> | admin
 
-<font color=#00ffff>============================================================================</font>
+<font color=#00ffff>============================================================================================================</font>
 
 <br>
 
 ### 4.常用菜单(FrequentlyUsedMenu) (常用菜单 1.1.2.1, 管理常用菜单1.1.4.2)
-服务名|描述|定义
---|:--|:--
+服务名|描述|定义|应用角色
+--|:--|:--|:--
 getfrequentlyUsedMenuListByUserId | 根据UserId,获取所有常用的菜品的 | getfrequentlyUsedMenuList(long userId) : return List<Food>
 
-<font color=#00ffff>============================================================================</font>
+<font color=#00ffff>============================================================================================================</font>
 
 <br>
 
 ### 5.获取积分(FrequentlyUsedMenu) (产看积分 1.1.4.1)
-服务名|描述|定义
---|:--|:--
+服务名|描述|定义|应用角色
+--|:--|:--|:--
 getCreditByUserId | 根据UserId,获取用户的积分 | getCreditByUserId(long userId) : return int
 
-<font color=#00ffff>============================================================================</font>
+<font color=#00ffff>============================================================================================================</font>
 
 <br>
 
 ### 5.点餐记录(orderRecord) (查看订单记录页面 1.1.4.3)
-服务名|描述|定义
---|:--|:--
+服务名|描述|定义|应用角色
+--|:--|:--|:--
 getorderRecordByUserId | 根据UserId,获取用户的点餐记录 | getCreditByUserId(long userId, int index, int limit) : return List<OrderRecord>
