更新<数据库设计>添加厨师角色表

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -28,6 +28,7 @@ updatetime|timestamp|修改时间
 
 <font color=#00ffff>============================================================================</font>  
 <br/>
+
 ## 3.厨师（cooker）：
 数据名|数据类型|说明
 --|:--|:--
@@ -42,6 +43,19 @@ updatetime|timestamp|修改时间
 
 <font color=#00ffff>============================================================================</font>  
 <br/>
+
+## 3.厨师角色（role）：
+数据名|数据类型|说明
+--|:--|:--
+id|longint|数据库中的id
+roleid|int|厨师角色的区分字段
+rolename|varchar(255)|厨师角色的
+createtime|timestamp|创建时间
+updatetime|timestamp|修改时间
+
+<font color=#00ffff>============================================================================</font>  
+<br/>
+
 ## 4.管理员（admin）:
 数据名|数据类型|说明
 --|:--|:--
@@ -73,6 +87,7 @@ name|varchar|菜品名字
 menuid|longint|所属菜单的名字
 stylesid|varchar(255)|口味id集合
 role|int|类型（凉品，熟食）
+picurl|String|食品的图片地址
 createtime|int|创建时间
 updatetime|int|修改时间
 
