--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -44,7 +44,7 @@ updatetime|timestamp|修改时间
 <font color=#00ffff>============================================================================</font>  
 <br/>
 
-## 3.厨师角色（role）：
+## 3.厨师角色（cookerRole）：
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
