完善了管理员功能设计

--- a/设计文档/管理员功能设计.md
+++ b/设计文档/管理员功能设计.md
@@ -13,7 +13,20 @@
 + 管理一级菜单
 + 管理菜品
 + 管理口味
++ 用户的常用菜单
 
 3.活动管理  
 + 管理推荐菜品
 + 管理优惠信息
++ 积分优惠信息
+
+
+### (2)信息查看 
+1.人员信息查看
++ 用户用餐记录
++ 厨师服务记录
++ 服务员分配记录
++ 代付款记录
++ 营业记录（按时间划分）
++ 畅销菜品
+
