为foodinfo包中的对象添加了enable字段

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -21,6 +21,8 @@ updatetime|timestamp|修改时间
 id|longint|数据库中的id
 userid|varchar|微信id
 name|varchar|微信名字
+phonenumber|varchar|电话号码
+loginid|varchar|登录凭证
 logintimes|int|登录次数
 enable|tinyint|是否有效
 createtime|timestamp|创建时间
@@ -35,6 +37,8 @@ updatetime|timestamp|修改时间
 id|longint|数据库中的id
 userid|varchar|微信id
 name|varchar|微信名字
+phonenumber|varchar|电话号码
+loginid|varchar|登录凭证
 logintimes|int|登录次数
 enable|tinyint|是否有效
 role|int|厨师属于哪一种（凉品，熟食）
@@ -61,6 +65,7 @@ updatetime|timestamp|修改时间
 --|:--|:--
 id|longint|数据库中的id
 name|varchar|姓名
+phonenumber|varchar|电话号码
 logintimes|int|登录次数
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
