更新数据库设计，将enable字段换为int类型

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -24,7 +24,7 @@ name|varchar|微信名字
 phonenumber|varchar|电话号码
 loginid|varchar|登录凭证
 logintimes|int|登录次数
-enable|tinyint|是否有效
+enable|int|是否有效
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
 
@@ -40,7 +40,7 @@ name|varchar|微信名字
 phonenumber|varchar|电话号码
 loginid|varchar|登录凭证
 logintimes|int|登录次数
-enable|tinyint|是否有效
+enable|int|是否有效
 role|int|厨师属于哪一种（凉品，熟食）
 createtime|timestamp|创建时间
 updatetime|timestamp|修改时间
@@ -93,6 +93,7 @@ menuid|longint|所属菜单的名字
 stylesid|varchar(255)|口味id集合
 role|int|类型（凉品，熟食）
 picurl|String|食品的图片地址
+enable|int|是否启用
 createtime|int|创建时间
 updatetime|int|修改时间
 
@@ -222,7 +223,6 @@ foodid|longint|food的id
 flag|int|展示时的方式
 createtime|int|创建时间
 updatetime|int|修改时间
-
 
 
 root_RSS
