添加了推荐菜品(recommendFood)实例以及对应的repository

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -192,8 +192,10 @@ updatetime|int|修改时间
 --|:--|:--
 id|longint|数据库中的id
 preference|double|折扣（<1,>0）
-createtime|int|创建时间
-updatetime|int|修改时间
+starttime|timstamp|生效时间
+endtime|timstamp|失效时间
+createtime|timstamp|创建时间
+updatetime|timstamp|修改时间
 
 <font color=#00ffff>============================================================================</font>  
 <br/>
@@ -206,6 +208,8 @@ updatetime|int|修改时间
 --|:--|:--
 id|longint|数据库中的id
 discount|double|优惠（<1,>0）
+starttime|timstamp|生效时间
+endtime|timstamp|失效时间
 createtime|int|创建时间
 updatetime|int|修改时间
 
