删除了preference表，为discount添加了类型

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -184,7 +184,7 @@ updatetime|int|修改时间
 <font color=#00ffff>============================================================================</font>  
 <br/>
 
-## 13.折扣信息记录（preferenceRecord）
+<!-- ## 13.折扣信息记录（preferenceRecord）
 保存折扣信息（积分满多少，可以获得多少的折扣）  
 <br/>
 
@@ -198,7 +198,7 @@ createtime|timstamp|创建时间
 updatetime|timstamp|修改时间
 
 <font color=#00ffff>============================================================================</font>  
-<br/>
+<br/> -->
 
 ## 14.优惠信息记录（discountRecord）
 保存优惠信息（直接在原价上折扣）  
@@ -208,6 +208,7 @@ updatetime|timstamp|修改时间
 --|:--|:--
 id|longint|数据库中的id
 discount|double|优惠（<1,>0）
+type|int|折扣的类型(0为折扣，1为满减)
 starttime|timstamp|生效时间
 endtime|timstamp|失效时间
 createtime|int|创建时间
