将数据库设计中使用到preference的地方删除，并为discount添加了生效金额字段

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -121,7 +121,6 @@ foodsid|varchar(255)|点的菜的id集合
 stylesid|varchar(255)|点的菜的口味id集合(与foodsid列表一一对应)
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
-preferenceid|longid|折扣id
 discountid|longid|优惠id 
 createtime|timestamp|创建的时间
 
@@ -136,7 +135,6 @@ userid|longint|微信id
 foodsid|varchar(255)|点的菜的id集合
 settlementAmount|double|折扣后的结算价格
 originalAmount|double|结算前的价格
-preferenceid|longid|折扣id
 discountid|longid|优惠id 
 expirationtime|timestamp|订单到期时间
 IsPaid|tinyint|是否付款
@@ -208,6 +206,7 @@ updatetime|timstamp|修改时间
 --|:--|:--
 id|longint|数据库中的id
 discount|double|优惠（<1,>0）
+moneylimit|double|生效金额 
 type|int|折扣的类型(0为折扣，1为满减)
 starttime|timstamp|生效时间
 endtime|timstamp|失效时间
