--- a/设计文档/服务接口设计.md
+++ b/设计文档/服务接口设计.md
@@ -1,6 +1,6 @@
 # 服务接口设计
 
-## 一.信息获取
+## 一.信息获取(GET)
 
 ### 1.菜单(Menu) (客户主界面1.1)
 服务名|描述|定义
@@ -51,3 +51,6 @@ getCreditByUserId | 根据UserId,获取用户的积分 | getCreditByUserId(long 
 服务名|描述|定义
 --|:--|:--
 getorderRecordByUserId | 根据UserId,获取用户的点餐记录 | getCreditByUserId(long userId, int index, int limit) : return List<OrderRecord>
+
+
+## 二.信息提交(POST)
