初步完成管理员接口设计，food,menu,waiter,discount,recommend的CRUD

--- a/设计文档/服务接口设计.md
+++ b/设计文档/服务接口设计.md
@@ -15,6 +15,7 @@ getMenuList | 获取所有一级菜单 | getMenuList() : return List<Menu>
 服务名|描述|定义
 --|:--|:--
 getFoodByMenuId | 根据menuId,获取该一级菜单下所有的菜品 | getFoodByMenuId(long menuId) : return List<Food>
+getFoodByMenu | 获取所有的菜品 | getFoodByMenu() : return List<Food>
 
 <font color=#00ffff>============================================================================</font>
 
@@ -47,10 +48,81 @@ getCreditByUserId | 根据UserId,获取用户的积分 | getCreditByUserId(long 
 
 <br>
 
-### 5.点餐记录(orderRecord) (查看订单记录页面 1.1.4.3)
+### 6.点餐记录(orderRecord) (查看订单记录页面 1.1.4.3)
 服务名|描述|定义
 --|:--|:--
 getorderRecordByUserId | 根据UserId,获取用户的点餐记录 | getCreditByUserId(long userId, int index, int limit) : return List<OrderRecord>
 
+### 7.服务员(waiter) (查看订单记录页面 1.1.4.3)
+服务名|描述|定义
+--|:--|:--
+getWaiterList | 获取Waiter信息 | getWaiterList(String search, int offset, int limit) : List<Waiter>
 
-## 二.信息提交(POST)
+getWaiterById | 根据Id获取服务员 | getWaiterById(long id) : Waiter
+
+### 8.工具(util)
+服务名|描述|定义
+--|:--|:--
+getLoginCode | 获取唯一的登录验证码 | getLoginCode() : String
+<!-- =========================================================== -->
+
+
+## 二.信息提交(POST)  
+### 1.菜单(Menu) (客户主界面1.1)
+服务名|描述|定义
+--|:--|:--
+addMenu | 添加一个一级菜单 | addMenu(String name, int enable)
+updateMenu | 更新一个一级菜单 | updateMenu(long id, String name, int enable)
+deleteMenu | 删除一个一级菜单 | deleteMenu(long id)
+
+<font color=#00ffff>============================================================================</font>
+
+<br>
+
+### 2.菜品(Food) (客户主界面 1.1)
+服务名|描述|定义
+--|:--|:--
+addFood | 添加一个菜品 | addFood(MultipartHttpServletRequest request,String name, long menuID, String styles, long cookerRole, int enable)
+updateFood | 更新一个菜品 | updateFood(long id, MultipartHttpServletRequest request, String name, long menuID, String styles, long cookerRole, int enable)
+deleteFood | 删除一个菜品 | deleteFood(long id)
+<font color=#00ffff>============================================================================</font>
+
+<br>
+
+### 3.口味(Style) (选择口味Toast 1.1.1)
+服务名|描述|定义
+--|:--|:--
+
+
+<font color=#00ffff>============================================================================</font>
+
+<br>
+
+### 4.常用菜单(FrequentlyUsedMenu) (常用菜单 1.1.2.1, 管理常用菜单1.1.4.2)
+服务名|描述|定义
+--|:--|:--
+
+<font color=#00ffff>============================================================================</font>
+
+<br>
+
+### 7.服务员(waiter)
+服务名|描述|定义
+--|:--|:--
+addWaiter | 添加一个服务员 | addWaiter(String loginID, String name, String phoneNumber, int enable)
+updateWaiter | 更新一个服务员 | updateWaiter(long id, String loginID, String name, String phoneNumber, int enable)
+deleteWaiter | 删除一个服务员 | deleteWaiter(long id)
+
+### 8.折扣(discount)
+服务名|描述|定义
+--|:--|:--
+addDiscount | 添加一条优惠信息 | addDiscount(int type, double moneyLimit, double discount, Timestamp startTime, Timestamp endTime)
+updateDiscount | 更新一条优惠信息 | updateDiscount(long id, int type, double moneyLimit, double discount, Timestamp startTime, Timestamp endTime)
+deleteDiscount | 删除一条优惠信息 | deleteDiscount(long id)
+
+### 9.推荐(recommend)
+服务名|描述|定义
+--|:--|:--
+addRecommend | 添加一条推荐信息 | addRecommend(long foodID, int type)
+updateDiscount | 更新一条推荐信息 | updateRecommend(long foodID, int type)
+deleteDiscount | 删除一条推荐信息 | deleteDiscount(long id)
