完成menu的crud，其他实体类完成controller接口

--- a/设计文档/文件命名中容易混淆的名词解释.md
+++ b/设计文档/文件命名中容易混淆的名词解释.md
@@ -1,6 +1,5 @@
 # 命名解释
 
 ## info/activityManagement下
-+ discount && preference 
-1. discount: 每个菜品直接的折扣。例如，设置为5折，则所有菜品都大五折
-2. preference: 结算时满多少，打多少的折扣。例如，设置为{100,5折}，则当用户消费金额达到100元时，菜品打五折(此时不参与discount折扣)
++ enable字段
+1. 0为false， 1为true
