向数据库设计中的菜品Food表添加了price字段

--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -93,6 +93,7 @@ menuid|longint|所属菜单的名字
 stylesid|varchar(255)|口味id集合
 role|int|类型（凉品，熟食）
 picurl|String|食品的图片地址
+price|double|食品的价格
 enable|int|是否启用
 createtime|int|创建时间
 updatetime|int|修改时间
