--- a/设计文档/问题记录.md
+++ b/设计文档/问题记录.md
@@ -4,3 +4,6 @@
 2. 管理Food时，当用户修改了一个菜品的图片，图库中的图片应该被删除(完成)
 3. 在活动管理时，查询推荐时，按照推荐菜的名字进行查询
 4. 删除一级菜单时，处理一级菜单下的菜品
+5. 折扣的类型，满减折扣，直接折扣， 满减
+6. 添加折扣(满减折扣)时，不能添加比记录中更低的或相同的
+7. 设置订单的过期时间
