--- a/设计文档/数据库设计.md
+++ b/设计文档/数据库设计.md
@@ -175,6 +175,8 @@ updatetime|int|修改时间
 数据名|数据类型|说明
 --|:--|:--
 id|longint|数据库中的id
+type|int|服务类型(1:呼叫服务,2: 送餐)
+waiterid|long|配送者的id
 orderrecordid|longint|点餐记录
 foodid|longid|分配菜品的id
 createtime|int|创建时间
