--- a/设计文档/未完成.md
+++ b/设计文档/未完成.md
@@ -4,8 +4,14 @@
 3. 查看积分
 4. 管理常用菜单
 5. 消费统计
-6. 对未支付成功订单(超时，未支付)重新下单
+6. 查看制作情况
 
 # Admin
 1. 查看Customer的下单情况
-2. 
+2. 查看Customer的消费统计
+
+# Cooker
+1. 派送订单
+
+# Waiter
+2. 派送订单
