--- a/设计文档/未完成.md
+++ b/设计文档/未完成.md
@@ -5,13 +5,15 @@
 4. 管理常用菜单
 5. 消费统计
 6. 查看制作情况
+7. 注销服务员和厨师
 
 # Admin
-1. 查看Customer的下单情况
-2. 查看Customer的消费统计
+1. 总览(本星期消费金额(表), 月消费金额(表), 最受欢迎菜品序列(), 今日点餐次数)
+2. 查看Customer的消费统计{总消费金额, 月消费金额(line-chart), 日消费金额(line-chart), }
 
 # Cooker
-1. 派送订单
+1. 派送订单{月次数(文字信息), 今日次数(文字信息), 配送记录(日, line-chart
+) }
 
 # Waiter
 2. 派送订单
