--- a/设计文档/未完成.md
+++ b/设计文档/未完成.md
@@ -8,12 +8,7 @@
 7. 注销服务员和厨师
 
 # Admin
-1. 总览(本星期消费金额(表), 月消费金额(表), 最受欢迎菜品序列(), 今日点餐次数)
+1. 总览( 月消费金额(表), 本星期消费金额(表), 本日消费金额(表), 本星期最受欢迎菜品序列(list), 日消费(line-chart), 今日点餐次数)
 2. 查看Customer的消费统计{总消费金额, 月消费金额(line-chart), 日消费金额(line-chart), }
-
-# Cooker
-1. 派送订单{月次数(文字信息), 今日次数(文字信息), 配送记录(日, line-chart
-) }
-
-# Waiter
-2. 派送订单
+3. 查看Cooker的派送记录{总派送次数, 月派送次数, 日派送记录(line-chart) }
+4. 查看Waiter的派送记录{总派送次数, 月派送次数, 日派送记录(line-chart) }
