--- a/设计文档/问题记录.md
+++ b/设计文档/问题记录.md
@@ -10,4 +10,12 @@
 8. 菜品管理中，没有菜品价格
 9. 快捷点餐时，如果没有餐品，应该有提示
 10. 将订单派送给服务员时，应该设有超时功能，当超时后，派送给另一个服务员
-11. 一个桌子被使用时，应被锁定，别人扫码无法使用
+12. 常用菜单中，如果存在已删除菜品应该有提示
+13. 对所有存储id的字段，在使用时都应该检查
+14. 
+
+摘要：核心思想，技术， 亮点
+标题加入章节题目中
+文字格式，标题的格式
+图编号在图上面
+内容都在同一页
